# LUDO

./: .gitignore  DevToolLudo.bat  DevToolLudo.ps1  README.md  SuggestedCommit.txt  history.md  package.json  pnpm-lock.yaml  project_map.md
AIHistory/: 20260424_2329_devtoolludops1-historymd.md
apps/client-tauri/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
apps/client-tauri/src/: App.tsx  styles.css  vite-env.d.ts
apps/client-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/client-tauri/src-tauri/capabilities/: default.json
apps/client-tauri/src-tauri/icons/: icon.icns
apps/client-tauri/src-tauri/prompts/: action_items.md  explain_like_im_new.md  meeting_minutes.md  qa_system.md
apps/client-tauri/src-tauri/src/: lib.rs  main.rs  mcp.rs
apps/client-tauri/src/artifacts/: artifactGenerator.ts
apps/client-tauri/src/asr/: azureServerAdapter.ts  backendAdapter.ts  microphonePipeline.ts  mockPipeline.ts  pythonWorkerClient.ts  serverAsrAdapter.ts
apps/client-tauri/src/mcp/: McpDevTools.tsx
apps/client-tauri/src/session/: sessionFileWriter.ts  sessionPersistence.ts  sessionStore.ts
docs/: ARCHITECTURE.md  EVENT_SCHEMA.md  PHASES.md  PRD.md  WORKER_IPC.md
docs/PROMPTS/: phase-0-bootstrap.md  phase-1-desktop-mvp.md  phase-2-system-audio-android.md  phase-3-agent-artifacts.md  phase-4-rag.md  phase-5-mcp.md  phase-6-drive-sync.md
services/asr-server-python/: README.md  pyproject.toml
services/asr-server-python/src/asr_server_python/: __init__.py  main.py
services/asr-server-python/src/ludo_asr_server_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/asr-worker-python/: README.md  pyproject.toml
services/asr-worker-python/src/asr_worker_python/: __init__.py  worker.py
services/asr-worker-python/src/ludo_asr_worker_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
