[package]
name = "ludo_client_tauri"
version = "0.1.3"
description = "LUDO desktop client"
authors = ["LUDO"]
edition = "2021"

[lib]
name = "ludo_client_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
